--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Hi, I'm [Your Name]. A Web Developer.</p>
+        <h1 class="fade-in">Welcome to My Portfolio</h1>
+        <p class="fade-in">Hi, I'm <strong>[Your Name]</strong> - A Web Developer</p>
+        <img src="profile.jpg" alt="Profile Picture" class="profile-img">
     </header>
-    
-    <section id="about">
+
+    <section id="about" class="slide-in">
         <h2>About Me</h2>
-        <p>I'm a passionate web developer who loves coding and creating awesome websites.</p>
+        <p>I am passionate about web development and love building beautiful, functional websites.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project">
+        <div class="project slide-in">
+            <img src="project1.jpg" alt="Project 1">
             <h3>Project 1</h3>
-            <p>Short description of the project.</p>
+            <p>Short description of this project.</p>
         </div>
-        <div class="project">
+        <div class="project slide-in">
+            <img src="project2.jpg" alt="Project 2">
             <h3>Project 2</h3>
-            <p>Short description of the project.</p>
+            <p>Short description of this project.</p>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="slide-in">
         <h2>Contact Me</h2>
         <p>Email: your.email@example.com</p>
         <p>GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
